<resources>
     <string name="registrationHeader">Verify your phone number</string>
    <string name="txtRegSubHeader">mAssigner will send a one time SMS message to verify your phone number.Carrier SMS charges may apply.</string>
    <string name="txtcheck">"I have read and agree to the "</string>
    <string name="txtTerm">"<u><b>Terms and conditions.</b></u> "</string>
    <string name="txtPlease">Please confirm your country code and enter your phone number and name.</string>
    <string name="app_name">mAssigner</string>
    <string name="self_text">self</string>
    <string name="received_text"> received</string>
    <string name="assigned_text">assigned</string>
    <string name="all_text">All</string>
    <string name="add_task_hint">Add Task</string>
    <string name="deadlinetext">DEADLINE</string>
    <string name="prioritylable">PRIORITY</string>
    <string name="urgencylable">Urgency Level</string>
    <string name="Mobilenotxt">Mobile No.</string>
    <string name="firstnametxt">First Name</string>
    <string name="middlenametxt">Middle Name</string>
    <string name="lastnametxt">Last Name</string>
    <string name="emailtxt">Email-id</string>
    <string name="donetxt">Done</string>
    <string name="Validator_PHONENO">Please enter valid Phone Number.</string>
    <string name="edittxt">edit</string>
    <string name="scheduletxt">sch.</string>
    <string name="assigntxt">assign</string>
    <string name="completetxt">alarm</string>
    <string name="registerbtnetxt">Register</string>
    <string name="registerpageheading">Create Your Account</string>
    <string name="cancelbtntxt">Cancel</string>
    <string name="createtasktxt">Create Task</string>
    <string name="deadlinelable">Set Deadline</string>
    <string name="reminderlinelable">Set Reminder</string>
    <string name="prioritytxtlable">Set Priority</string>
    <string name="contactwisetxt">CONTACT WISE SUMMARY</string>
    <string name="contactself"> Self</string>
    <string name="contactreceive"> Received</string>
    <string name="contactAssign"> Assigned</string>
    <string name="sortonlablet">SORT ON</string>
    <string name="namewisetxt"> Name</string>
    <string name="datewisetxt"> Updation Date</string>
    <string name="prioritywisetxt"> Creation Date</string>
    <string name="viewtasklable">VIEW TASK</string>
    <string name="helplabel">HELP</string>
    <string name="txtfaql"> Support</string>
    <string name="txthowtouse"> How to use it?</string>
    <string name="open_text"> Open</string>
    <string name="closed_text"> Closed</string>
    <string name="junk_text"> UnKnown</string>
    <string name="otherslablet">OTHERS</string>
    <string name="synclable"> Sync</string>
    <string name="offline_alert">Please Check your internet connection</string>
    <string name="email_no_blank_alert">Email and first name cannot be blank</string>
    <string name="manual_entry_alert">Please insert records (First name and email-Id are mandatory)</string>
    <string name="invalid_ph_no">You must enter a valid mobile number</string>
    <string name="invalid_name">You must enter a name</string>
     <string name="btnTerm">Agree and Continue</string>
    <string name="success">00</string>
    <string name="checkpartial">PARTIAL</string>
    <string name="checkcomplete">COMPLETE</string>
    <string name="progress">Loading...</string>
    <string name="task_progress">Loading Tasks...</string>
    <string name="low_priority_val">1</string>
    <string name="med_priority_val">2</string>
    <string name="high_priority_val">3</string>
    <string name="fire_priority_val">4</string>
    <string name="low_priority_txt">Low&#160;</string>
    <string name="med_priority_txt">Medium&#160;</string>
   <string name="high_priority_txt">Moderate&#160;</string>
    <string name="fire_priority_txt">Fire&#160;</string>
    <string name="open_status">OPEN</string>
    <string name="close_status">CLOSE</string>
    <string name="open_task_status">OPEN</string>
    <string name="closed_task_status">CLOSE</string>
    <string name="junk_task_status">JUNK</string>
    <string name="openTask">openTask</string>
    <string name="closedTask">closedTask</string>
    <string name="unknownTask">unknownTask</string>
    <string name="todaysTask">todaysTask</string>
    <string name="tomorrowsTask">tomorrowsTask</string>
    <string name="next7DaysTask">next7DaysTask</string>
    <string name="delayedTask">delayedTask</string>
    <string name="snoozTask">snoozTask</string>
    <string name="fireTask">UrgentTask</string>
    <string name="registration_fail_toast">You are not registered, Please try later</string>
    <string name="service_error_toast">Sorry, Server is not responding</string>
    <string name="blank_msg_toast">Please write some message before sending</string>
    <string name="change_reminder_toast">Reminder Changed</string>
    <string name="change_target_toast">Deadline Changed</string>
    <string name="same_reminder_toast">Reminder not Changed</string>
    <string name="same_target_toast">Deadline not Changed</string>
    <string name="blank_task_desc_toast">Task Description can not be blank</string>
    <string name="task_created_toast_synced">Task created successfully</string>
     <string name="task_updated_toast_synced">Task Updated successfully</string>
    <string name="task_created_toast_not_synced">Task created successfully, It will be synced as network will available</string>
    <string name="change_alarm_toast">Alarm Changed</string>
    <string name="same_alarm_toast">Alarm not Changed</string>
    <string name="blank_contact_toast">Select Contact</string>
    <string name="contact_exceed_toast">More than 5 contacts cannot be added</string>
    <string name="msg_from_receiver">working on it</string>
    <string name="msg_from_sender">please expedite</string>
    <string name="deadline_notify_msg">Last day for Your task!!</string>
    <string name="new_task_notify_msg">Task for you!!</string>
    <string name="close_task_notify_msg">Task closed!!</string>
    <string name="new_message_notify_msg">New message for you!!</string>
    <string name="fire_task_notify_msg">Task urgency raised!!</string>
    <string name="deadline_ticker">Deadline Reminder</string>
    <string name="new_task_ticker">New Task</string>
    <string name="new_msg_ticker">New Message</string>
    <string name="close_task_ticker">Task Closed</string>
    <string name="fire_task_ticker">Urgent Task</string>
    <string name="complete_description">Complete Icon</string>
    <string name="user_description">User Icon</string>
    <string name="schedule_description">Schedule Icon</string>
    <string name="edit_description">Edit Icon</string>
    <string name="task_arrow_description">Task Arrow Icon</string>
    <string name="task_sync_description">Task Sync Icon</string>
    <string name="task_expand_description">Task Expand Icon</string>
    <string name="fire_icon_description">Fire Icon</string>
    <string name="fav_icon_description">Favourite Icon</string>
    <string name="alarm_icon_description">Alarm Icon</string>
    <string name="vertical_margin_description">Vertical Margin</string>
    <string name="horizontal_margin_description">Horizontal Margin</string>
    <string name="divider_description">Divider</string>
    <string name="unread_msg_task_description">Unread Message/Task</string>
    <string name="task_type_description">Task type Box</string>
     <string name="task_desc_arrow">>></string>
       <string name="task_desc_arrow_up">V</string>
    <string name="Mobilenohint">Enter Mobile No.</string>
    <string name="firstnamehint">Enter First Name</string>
    <string name="middlenamehint">Enter Middle Name</string>
    <string name="namehint">Enter Your Name</string>
    <string name="lastnamehint">Enter Last Name</string>
    <string name="emailhint">Enter email-id</string>
    <string name="newtaskhint">Enter To- Do</string>
    <string name="newmesghint">Write a message</string>
    <string name="dismisstxt">Dismiss</string>
    <string name="snoozetxt">Snooze</string>
</resources>