<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/pagebackground"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="100" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addtasklinear"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="14"
        android:background="@drawable/topbg"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp" >

        <!-- com.taskmanager.widgets.NoteEditText -->

        <EditText
            android:id="@+id/addtaskedit"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="textMultiLine"
            android:maxLength="100"
            android:maxLines="3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addtaskdesclinear"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:orientation="horizontal"
        android:padding="10dp" >

        <LinearLayout
            android:id="@+id/asigneename"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="89"
            android:background="@drawable/assignee_name_input"
            android:orientation="vertical" >
        </LinearLayout>

        <ImageView
            android:id="@+id/asigneeicon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="11"
            android:background="@drawable/assignee_icon"
            android:contentDescription="@string/user_description" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:orientation="vertical"
        android:padding="10dp" >

        <ScrollView
            android:id="@+id/asigneeslistscroll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_box_new"
            android:stackFromBottom="true"
            android:transcriptMode="alwaysScroll" >

            <LinearLayout
                android:id="@+id/asigneeslist"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addtaskdeadlinelinear"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="100" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="bottom"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/deadlinetext"
            android:textColor="@color/navy_blue"
            android:textSize="14sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/deadlinecheck"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:button="@drawable/deadline_checkbox"
            android:gravity="bottom" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="bottom|right"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" >

            <TextView
                android:id="@+id/deadlinedate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/small_line"
                android:gravity="center_horizontal"
                android:textColor="@color/light_gray"
                android:textSize="14sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="bottom|right"
            android:paddingLeft="10dp" >

            <TextView
                android:id="@+id/deadlinetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:textColor="@color/light_gray"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/remindericons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/deadlinetime"
                android:layout_toRightOf="@id/deadlinetime"
                android:background="@drawable/deadline_reminder_icon" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/horizental_line" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="100" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/prioritylable"
            android:textColor="@color/navy_blue"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/priorityradio"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp" >

            <TextView
                android:id="@+id/lowprioritytext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/low_priority_txt"
                android:textColor="@color/navy_blue"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/lowpriorityradio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/blue_radio_button"
                android:checked="true" />

            <TextView
                android:id="@+id/mediumprioritytext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/med_priority_txt"
                android:textColor="@color/navy_blue"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/mediumpriorityradio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/blue_radio_button" />

            <TextView
                android:id="@+id/highprioritytext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/high_priority_txt"
                android:textColor="@color/navy_blue"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/highpriorityradio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/blue_radio_button" />

            <TextView
                android:id="@+id/fireprioritytext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/fire_priority_txt"
                android:textColor="@color/fire_red"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/firepriorityradio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/fire_radio_button" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addtaskbtnlinear"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center_vertical|right"
        android:orientation="horizontal"
        android:padding="10dp" >

        <Button
            android:id="@+id/addtaskbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_btn2"
            android:gravity="center"
            android:text="@string/add_task_hint"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>