<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|center_horizontal"
    android:background="@drawable/popupbg"
    android:orientation="vertical"
    android:weightSum="100" >

    <LinearLayout
        android:id="@+id/taskinfo"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:orientation="horizontal"
        android:weightSum="100" >

        <LinearLayout
            android:id="@+id/tasktext"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="80"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/popupmsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/navy_blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/navy_blue"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/remindericon"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="20"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/reminder_iocn" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/taskicons"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="60"
        android:orientation="horizontal"
        android:weightSum="100" >

        <LinearLayout
            android:id="@+id/dismissicon"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="33.3"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/dismiss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/dismiss_icon" />

            <TextView
                android:id="@+id/dismisstxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dismisstxt" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/snoozeicon"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="33.3"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/snooze"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/snooze_icon" />

            <TextView
                android:id="@+id/snoozetxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/snoozetxt" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/doneicon"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="33.4"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/done_icon" />

            <TextView
                android:id="@+id/donetxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donetxt" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>