<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mySwitch="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.taskmanager.app"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#00000000"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearTop"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:gravity="center" >

        <LinearLayout
             android:id="@+id/linearTopSecnd"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            
            android:background="@drawable/roundedbg"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:weightSum="100" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:focusable="true"
                android:focusableInTouchMode="true" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearHeader"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="100" >

                <LinearLayout
                    android:id="@+id/linearOk"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="49.25"
                    android:gravity="center" >

                    <ImageButton
                        android:id="@+id/imgOk"
                        android:layout_width="23dp"
                        android:layout_height="20dp"
                        android:background="@drawable/createcheck" />

                    <Button
                        android:id="@+id/addtaskbtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:background="@color/white"
                        android:clickable="false"
                        android:gravity="center"
                        android:text="OK"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="0.5"
                    android:paddingBottom="3dp"
                    android:paddingTop="3dp" >

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="34dp"
                        android:layout_gravity="center"
                        android:background="@drawable/divider"
                        android:contentDescription="@string/divider_description"
                        android:visibility="visible" />
                    
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="48"
                    android:gravity="center"
                    android:visibility="gone" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:text="@string/createtasktxt"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.5" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:background="@drawable/dividercreate"
                        android:contentDescription="@string/divider_description"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearCancel"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_weight="49.25"
                    android:gravity="center" >

                    <ImageButton
                        android:id="@+id/imgCancel"
                        android:layout_width="22dp"
                        android:layout_height="19dp"
                        android:background="@drawable/createcross" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/white"
                        android:clickable="false"
                        android:text="Cancel"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:background="@drawable/line_bg" />
            
             <RelativeLayout
                        android:id="@+id/relativeEdit"
                        android:layout_width="fill_parent"
                        android:layout_height="130dp"
                        android:orientation="vertical" >

                         <com.taskmanager.wheel.widget.DateTimeWheel
    								android:layout_height="wrap_content"
    								 android:layout_marginLeft="3dp"
    								  android:layout_marginRight="2dp"
    								android:layout_width="fill_parent" />


                        <ImageView
                            android:id="@+id/addtaskediticon"
                            android:layout_width="fill_parent"
                            android:layout_height="1dp"
                            android:layout_below="@+id/addtaskedit"
                            android:background="@drawable/createtask" />

                        <ImageView
                            android:id="@+id/addtaskediticon"
                            android:layout_width="50dp"
                            android:layout_height="44dp"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="1dp"
                            android:background="@drawable/create_task_icon"
                            android:contentDescription="@string/user_description"
                            android:visibility="gone" />
                    </RelativeLayout>
            
            
            
            
            

         
    </LinearLayout>
    </LinearLayout>
 </LinearLayout>